--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
-## JWForever5504
-### Home
-Browse to find downloads and other resources!
+. 
+├── index.md # =>jwforever.com/ 
+├── downloads # folder containing pages 
+│ └── add-on.md # => jwforever.com/downloads 
+├── about # folder containing pages 
+│ └── about_me.md # => jwforever.com/about_me
