--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 . 
-├── index.md # =>jwforever.com/ 
+├── index.md # => https://jwforever5504.github.io/jwforever/
 ├── downloads # folder containing pages 
-│ └── add-on.md # => jwforever.com/downloads 
+│ └── add-on.md # => https://jwforever5504.github.io/jwforever/downloads 
 ├── about # folder containing pages 
-│ └── about_me.md # => jwforever.com/about_me
+│ └── about_me.md # => https://jwforever5504.github.io/jwforever/about_me
