--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 . 
-├── index.md # => https://jwforever5504.github.io/jwforever/
+├── home.md # => https://jwforever5504.github.io/jwforever/
 ├── downloads # folder containing pages 
 │ └── add-on.md # => https://jwforever5504.github.io/jwforever/downloads 
 ├── about # folder containing pages 
